--- a/content/attributes.adoc
+++ b/content/attributes.adoc
@@ -33,6 +33,7 @@
 :demoapp-repo-name: demoapp
 :demoapp-repo-web-url: {gitserver-url}/{admin-user}/{demoapp-repo-name}
 :demoapp-repo-git-url: ssh://git@gitserver:5022/{admin-user}/{demoapp-repo-name}.git
+:webhook-url: {jenkins-url}/git/notifyCommit?url={demoapp-repo-git-url}
 :demoapp-mb-job-name: {demoapp-repo-name}
 :demoapp-mb-job-url: {jenkins-url}/job/{demoapp-mb-job-name}
 :demoapp-mb-job-build-url: {demoapp-mb-job-url}/build?delay=0
